# QEMU-QMGR

./: CMakeLists.txt  README.md  qmgr.cpp
.github/workflows/: cmake-multi-platform.yml
